# configuration-manager

./: .gitignore  Cargo.toml  README.md
src/: cli.rs  main.rs  repo.rs  startup.rs
src/cli/: add.rs  ls.rs  rm.rs  show_usage.rs  switch.rs
src/repo/: config.rs  config_file.rs  error.rs  mod.rs  program.rs  vcs.rs
src/startup/: error.rs  logging.rs  mod.rs  users.rs
